# task_management

./: docker-compose.yml  pyproject.toml
multiplataform_development_aula/: .env.sample  application.py  main.py
multiplataform_development_aula/config/: database.py  settings.py
multiplataform_development_aula/controller/: usuario_controller
multiplataform_development_aula/domain/dto/: dtos.py
multiplataform_development_aula/domain/util/: utils.py
multiplataform_development_aula/model/: models.py
multiplataform_development_aula/repository/: usuario_repository.py
multiplataform_development_aula/service/: usuario_service.py
