[tool.poetry]
name = "multiplataform-development-aula"
version = "0.1.0"
description = ""
authors = ["matheushn99 <matheus.neres2022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
